third_party/move/tools/move-decompiler/tests/compiler-v2-test/ability-transform/by_reference.exp
script {
    entry fun <SELF>_0() {
        if (!(0 == 0)) abort 42;
        if (!(vector[104u8, 101u8, 108u8, 108u8, 111u8] == vector[104u8, 101u8, 108u8, 108u8, 111u8])) abort 42;
        let _t1 = &mut 0;
        *_t1 = 1;
        let _t3 = &mut vector[104u8, 101u8, 108u8, 108u8, 111u8];
        *_t3 = vector[98u8, 121u8, 101u8];
        if (!(*_t1 == 1)) abort 42;
        if (!(*_t3 == vector[98u8, 121u8, 101u8])) abort 42;
    }
}

--- unable to recompile the decompiled code:
exiting with context checking errors
error: unexpected token
  ┌─ by_reference.move:2:15
  │
2 │     entry fun <SELF>_0() {
  │               ^
  │               │
  │               Unexpected '<'
  │               Expected an identifier
